kubernetes/longhorn/config/ingress.yaml
---
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.efym.net`)
      kind: Rule
      # middlewares:
      #   - name: authelia
      #     namespace: authelia
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    secretName: efym-net-tls
